--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -6,16 +6,12 @@ name: 'jekyll'
 # The type key specifies the language and version for your application.
 type: 'ruby:2.5'
 
-dependencies:
-    ruby: # Specify one Bundler package per line.
-        bundler: "2.0.1"
-        jekyll: "*"
-
 # The hooks that will be triggered when the package is deployed.
 hooks:
     # Build hooks can modify the application files on disk but not access any services like databases.
     build: |
-      bundle exec jekyll build
+        bundle install
+        bundle exec jekyll build
 
 # The size of the persistent disk of the application (in MB).
 disk: 5120
