--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -10,8 +10,8 @@ type: 'ruby:2.5'
 hooks:
     # Build hooks can modify the application files on disk but not access any services like databases.
     build: |
-        bundle install
-        bundle exec jekyll build
+        #bundle install
+        #bundle exec jekyll build
 
 # The size of the persistent disk of the application (in MB).
 disk: 5120
